<resources>
    <string name="app_name">Udemy Android Kotlin Course</string>
    <!--Constraint Layout String's-->
    <string name="first_button">Primeiro Botão</string>
    <string name="second_button">2</string>
    <string name="third_button">3</string>
    <string name="fourth_button">4</string>
    <string name="fifth_button">5</string>
    <!--Linear Layout String's-->
    <string name="primeiro_botao">Primeiro Botão</string>
    <string name="segundo_botao">Segundo Botão</string>
    <string name="terceiro_botao">Terceiro Botão</string>
    <!--Relative Layout String's-->
    <string name="bt_first">Primeiro Botão</string>
    <string name="bt_second">Segundo Botão</string>
    <string name="bt_third">Terceiro Botão</string>
</resources>