<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Constraint Layout-->
    <Button
        android:id="@+id/first_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:text="@string/first_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/second_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/second_button"
        app:layout_constraintTop_toBottomOf="@+id/first_button"
        app:layout_constraintStart_toStartOf="@+id/first_button"/>

    <Button
        android:id="@+id/third_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/third_button"
        app:layout_constraintTop_toBottomOf="@+id/first_button"
        app:layout_constraintStart_toEndOf="@+id/second_button"
        app:layout_constraintEnd_toStartOf="@+id/fourth_button"/>

    <Button
        android:id="@+id/fourth_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/fourth_button"
        app:layout_constraintTop_toBottomOf="@+id/first_button"
        app:layout_constraintStart_toEndOf="@+id/third_button"
        app:layout_constraintEnd_toStartOf="@+id/fifth_button"/>

    <Button
        android:id="@+id/fifth_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/fifth_button"
        app:layout_constraintTop_toBottomOf="@+id/first_button"
        app:layout_constraintEnd_toEndOf="@+id/first_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>