<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/primeiro_botao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primeiro_botao"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/segundo_botao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/segundo_botao"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/terceiro_botao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terceiro_botao"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/iv_pessoa"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars" />

</LinearLayout>